// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app/components/atoms/Card stories Sample matches markup snapshot 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <div
      class="card"
    >
      <div
        class="body"
      >
        <h2
          class="title"
        >
          sample card
        </h2>
        <p
          class="content"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`app/components/atoms/Card stories Sized matches markup snapshot 1`] = `
<DocumentFragment>
  <div
    class="container"
    style="width: 400px;"
  >
    <div
      class="card"
    >
      <div
        class="body"
      >
        <h2
          class="title"
        >
          sample card
        </h2>
        <p
          class="content"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`app/components/atoms/Card stories WithImage matches markup snapshot 1`] = `
<DocumentFragment>
  <div
    class="container"
    style="width: 400px;"
  >
    <div
      class="card"
    >
      <div
        class="body"
      >
        <h2
          class="title"
        >
          sample card
        </h2>
        <p
          class="content"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
